try fix location

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         value="This content will always face you."
         look-at="[gps-camera]"
         scale="120 120 120"
-        gps-entity-place="latitude: 40.46124789397873; longitude: -3.695839920898175;"
+        gps-projected-entity-place="latitude: 40.46124789397873; longitude: -3.695839920898175;"
       ></a-text>
       <a-camera gps-camera rotation-reader> </a-camera>
     </a-scene>
